--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@midpoint68/pocket",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A simple and efficient particle manager for JavaScript.",
   "main": "pocket.js",
   "directories": {
@@ -25,5 +25,6 @@
   "bugs": {
     "url": "https://github.com/midpoint68/pocket/issues"
   },
-  "homepage": "https://github.com/midpoint68/pocket#readme"
+  "homepage": "https://github.com/midpoint68/pocket#readme",
+  "type": "module"
 }
